<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sdk_title"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center"
                android:text="@string/home_title"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/explain"
                android:paddingEnd="7dp"
                android:paddingStart="27dp"
                android:textColor="@android:color/white"
                android:text="@string/description"
                android:layout_marginEnd="5dp"
                android:textSize="12sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/vod_hasSkin"
            style="@style/BtnAttr"
            android:text="@string/vod_hasSkin" />

        <Button
            android:id="@+id/vod_noSkin"
            style="@style/BtnAttr"
            android:text="@string/vod_noSkin" />

        <Button
            android:id="@+id/live_hasSkin"
            style="@style/BtnAttr"
            android:text="@string/live_hasSkin" />

        <Button
            android:id="@+id/live_noSkin"
            style="@style/BtnAttr"
            android:text="@string/live_noSkin" />

        <Button
            android:id="@+id/active_player_hasSkin"
            style="@style/BtnAttr"
            android:text="@string/active_player_hasSkin" />

        <Button
            android:id="@+id/active_player_noSkin"
            style="@style/BtnAttr"
            android:text="@string/active_player_noSkin" />

        <Button
            android:id="@+id/mobile_player_hasSkin"
            style="@style/BtnAttr"
            android:text="@string/mobile_player_hasSkin" />

        <Button
            android:id="@+id/mobile_player_noSkin"
            style="@style/BtnAttr"
            android:text="@string/mobile_player_noSkin" />

        <Button
            android:id="@+id/other"
            style="@style/BtnAttr"
            android:text="@string/other" />

        <Button
            android:id="@+id/play_local"
            style="@style/BtnAttr"
            android:text="播放"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:layout_below="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:layout_marginTop="13dp"
        android:text="@string/versionCode"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

</RelativeLayout>