<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="25dp"
        android:minHeight="31dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/liveId"
            style="@style/tabBtnAtrr"
            android:background="@drawable/btn_left_selected"
            android:text="@string/liveId" />

        <Button
            android:id="@+id/streamId"
            style="@style/tabBtnAtrr"
            android:layout_marginLeft="-1dp"
            android:background="@drawable/btn_right_selected"
            android:text="@string/streamId" />

        <Button
            android:id="@+id/playPath"
            style="@style/tabBtnAtrr"
            android:layout_marginLeft="-1dp"
            android:background="@drawable/btn_right_selected"
            android:visibility="gone"
            android:text="@string/play_Path" />
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/live_ID"
        style="@style/vodLinearLayout" >

        <TextView
            style="@style/vodTextView"
            android:text="@string/live_ID" />

        <EditText
            android:id="@+id/domain_content"
            style="@style/vodEditText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/radioGroup"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rtmp"
                style="@style/radioButtonAtrr"
                android:checked="true"
                android:text="@string/rtmp" />

            <RadioButton
                android:id="@+id/hls"
                style="@style/radioButtonAtrr"
                android:layout_marginStart="66dp"
                android:text="@string/hls" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/live_path"
        android:visibility="gone"
        style="@style/vodLinearLayout" >

        <TextView
            style="@style/vodTextView"
            android:text="@string/domain" />

        <EditText
            android:id="@+id/path_content"
            style="@style/vodEditText" />
    </LinearLayout>

    <Button
        android:id="@+id/startLive"
        style="@style/playbtn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="82dp"
        android:text="@string/start_live" />

</LinearLayout>